# cpp_project_template

./: CMakeLists.txt  NOTICE  Readme.md  build.py
inc/: dumb_cpp_math.hpp  dumb_math.h
src/: dumb_cpp_math.cpp  dumb_math.c
test/: dumb_math_test.cpp  runner.cpp
